# Motrix-NEXT

./: .babelrc  .gitignore  .prettierignore  .prettierrc  .stylelintrc.json  README-CN.md  README.md  app-update.yml  components.json  electron-builder.json  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.renderer.config.ts
.electron-vue/: build.js  dev-runner.js  webpack.main.config.js  webpack.renderer.config.js  webpack.web.config.js
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_bug_report_cn.yml  feature_request.md  feature_request_cn.md
.github/workflows/: codeql-analysis.yml  release.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING-CN.md  CONTRIBUTING.md
extra/: README.md  aria2-version.json
scripts/: benchmark-tracker-cache.ts  build.mjs  check-aria2-assets.mjs  sync-aria2.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.darwin.arm64.conf.json  tauri.darwin.x64.conf.json  tauri.linux.arm64.conf.json  tauri.linux.armv7l.conf.json  tauri.linux.x64.conf.json  tauri.win32.arm64.conf.json  tauri.win32.ia32.conf.json  tauri.win32.x64.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: app_cmds.rs  config_cmds.rs  engine_cmds.rs  event_cmds.rs  file_cmds.rs
src-tauri/src/config/: defaults.rs  mod.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/managers/: menu.rs  tray.rs
src-tauri/windows/: main.wxs
src/main/: Application.ts  Launcher.ts  index.dev.ts
src/shared/: configKeys.ts  constants.ts  keymap.ts  ua.ts
(+432 files in other folders)
