[package]
name = "motrix"
version = "0.0.1"
description = "A full-featured download manager"
authors = ["YueMiyuki"]
edition = "2021"

[lib]
name = "motrix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "time", "rt"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
open = "5"
trash = "5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-nosleep = { git = "https://github.com/pevers/tauri-plugin-nosleep", rev = "6f6ab76ec171d075476b585282290fcf2e1c40b5" }
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "^0.61.2", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_System_JobObjects",
] }
